force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/PSTA_ReasignacionAsesorPostventa__c.object-meta.xml
<CustomObject>
    <description>Cola tecnica para reasignacion nocturna de tareas, oportunidades y cadencias por cambio de asesor en PostVenta.</description>
    <label>Reasignacion Asesor Postventa</label>
    <nameField>
        <displayFormat>RAP-{000000}</displayFormat>
        <label>Reasignacion Asesor Postventa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reasignaciones Asesor Postventa</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>