force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reasignaciones Asesor Postventa</relationshipLabel>
    <relationshipName>ReasignacionesAsesorPostventa</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>