force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/AsesorAnterior__c.field-meta.xml
<CustomField>
    <fullName>AsesorAnterior__c</fullName>
    <label>Asesor Anterior</label>
    <length>50</length>
    <type>Text</type>
</CustomField>