force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/AsesorNuevo__c.field-meta.xml
<CustomField>
    <fullName>AsesorNuevo__c</fullName>
    <label>Asesor Nuevo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>