force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/CambioAsesor__c.field-meta.xml
<CustomField>
    <fullName>CambioAsesor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio de Asesor</label>
    <type>Checkbox</type>
</CustomField>