force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/CambioOwner__c.field-meta.xml
<CustomField>
    <fullName>CambioOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio de Owner</label>
    <type>Checkbox</type>
</CustomField>