force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/ClaveCuenta__c.field-meta.xml
<CustomField>
    <fullName>ClaveCuenta__c</fullName>
    <externalId>true</externalId>
    <label>Clave Cuenta</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>