force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/DetalleProceso__c.field-meta.xml
<CustomField>
    <fullName>DetalleProceso__c</fullName>
    <label>Detalle del Proceso</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>