force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/EstatusProceso__c.field-meta.xml
<CustomField>
    <fullName>EstatusProceso__c</fullName>
    <label>Estatus del Proceso</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Procesado</fullName>
            </value>
            <value>
                <fullName>Omitido</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>