force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/FechaCambio__c.field-meta.xml
<CustomField>
    <fullName>FechaCambio__c</fullName>
    <label>Fecha de Cambio</label>
    <type>DateTime</type>
</CustomField>