force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/Intentos__c.field-meta.xml
<CustomField>
    <fullName>Intentos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Intentos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>