force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/OwnerAnterior__c.field-meta.xml
<CustomField>
    <fullName>OwnerAnterior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Anterior</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reasignaciones Owner Anterior</relationshipLabel>
    <relationshipName>ReasignacionesOwnerAnterior</relationshipName>
    <type>Lookup</type>
</CustomField>