force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/OwnerNuevo__c.field-meta.xml
<CustomField>
    <fullName>OwnerNuevo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Nuevo</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reasignaciones Owner Nuevo</relationshipLabel>
    <relationshipName>ReasignacionesOwnerNuevo</relationshipName>
    <type>Lookup</type>
</CustomField>