force-app/main/default/objects/PSTA_ReasignacionAsesorPostventa__c/fields/UltimaEjecucion__c.field-meta.xml
<CustomField>
    <fullName>UltimaEjecucion__c</fullName>
    <label>Ultima Ejecucion</label>
    <type>DateTime</type>
</CustomField>